--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This package contains all contracts which are needed to create your personal service for Daox platform",
   "main": "truffle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ganache-cli -p 8546 & truffle compile && truffle test"
   },
   "repository": {
     "type": "git",
