--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,7 @@ before_script:
   - npm i && npm i -g truffle ganache-cli
 
 script:
-  - bash ganache-cli -p 8546 & truffle compile && truffle test
+  - ganache-cli -p 8546
+  - sleep 5
+  - truffle compile
+  - truffle test
