Update package.json license

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ethereum"
   ],
   "author": "Anton Vityazev",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/daox/daox-api/issues"
   },
